[gd_scene load_steps=27 format=4 uid="uid://eikw3ntiw255"]

[ext_resource type="Script" uid="uid://b7rqta5v53in7" path="res://Scripts/Game Manager/Exit.gd" id="1_m8vve"]
[ext_resource type="Script" uid="uid://b2crk8xxdp1si" path="res://Scripts/Game Manager/level_9.gd" id="1_xoy03"]
[ext_resource type="Texture2D" uid="uid://ctswc0ls4w741" path="res://Art/Tilemap/background.png" id="2_srbr3"]
[ext_resource type="Texture2D" uid="uid://dgd7d3ku8sseo" path="res://Art/Tilemap/grass.png" id="3_xoy03"]
[ext_resource type="Script" uid="uid://bn7lc7j6o4y67" path="res://Scripts/Game Manager/portal_entrance.gd" id="5_p0t4e"]
[ext_resource type="Texture2D" uid="uid://kydsm2t1p25w" path="res://Art/Tilemap/portal_entrance.png" id="6_dvuif"]
[ext_resource type="Script" uid="uid://cgde16efkifqt" path="res://Scripts/Game Manager/interactable.gd" id="6_mg4fs"]
[ext_resource type="Texture2D" uid="uid://f1uiinvccci4" path="res://Art/Tilemap/portal_exit.png" id="7_7ph8i"]
[ext_resource type="FontFile" uid="uid://coacccvk10kbs" path="res://Art/Font/Tiny5-Regular.ttf" id="8_5ovaj"]
[ext_resource type="Script" uid="uid://f4fawci4i2ae" path="res://Scripts/Visuals/floating.gd" id="8_7ph8i"]
[ext_resource type="Texture2D" uid="uid://qavfdx68st4v" path="res://Art/Tilemap/hanging_egg.png" id="8_15dr6"]
[ext_resource type="Script" uid="uid://c524gyagitieh" path="res://Scripts/Game Manager/floating_text.gd" id="9_15dr6"]
[ext_resource type="Texture2D" uid="uid://boccw7iot1qnq" path="res://Art/Tilemap/lighting.png" id="11_by1fu"]
[ext_resource type="Shader" uid="uid://bgidu00p2orte" path="res://Shaders/light_pulsing.gdshader" id="12_ect60"]
[ext_resource type="Shader" uid="uid://c3t7g2xw7cmso" path="res://Shaders/vine_swing.gdshader" id="14_twgay"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhqol"]
size = Vector2(15.6875, 482)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3anf8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m8vve"]
texture = SubResource("CompressedTexture2D_3anf8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_srbr3"]
texture = ExtResource("3_xoy03")
margins = Vector2i(4, 4)
separation = Vector2i(4, 4)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
4:6/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
4:5/0 = 0
4:4/0 = 0
3:4/0 = 0
4:3/0 = 0
3:3/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:1/0 = 0
5:0/0 = 0
4:0/0 = 0
3:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:3/0 = 0
6:3/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:5/0 = 0
6:5/0 = 0
5:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0

[sub_resource type="TileSet" id="TileSet_xoy03"]
physics_layer_0/collision_layer = 2
physics_layer_0/collision_mask = 25
sources/0 = SubResource("TileSetAtlasSource_m8vve")
sources/1 = SubResource("TileSetAtlasSource_srbr3")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_by1fu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h1tbk"]
shader = ExtResource("12_ect60")
shader_parameter/pulse_speed = 1.0
shader_parameter/pulse_intensity = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kbgx0"]
shader = ExtResource("12_ect60")
shader_parameter/pulse_speed = 1.0
shader_parameter/pulse_intensity = 0.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_10slw"]
shader = ExtResource("12_ect60")
shader_parameter/pulse_speed = 1.0
shader_parameter/pulse_intensity = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_ebg0i"]
radius = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ect60"]
shader = ExtResource("14_twgay")
shader_parameter/time_offset = 0.0
shader_parameter/sway_speed = 2.0
shader_parameter/sway_strength = 5.0
shader_parameter/sway_frequency = 10.0

[node name="Node2D" type="Node2D"]
script = ExtResource("1_xoy03")

[node name="Exit" type="Area2D" parent="."]
position = Vector2(638, -2)
script = ExtResource("1_m8vve")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(10, -238)
shape = SubResource("RectangleShape2D_fhqol")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(16, -35)

[node name="Background" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(156, -7)
texture = ExtResource("2_srbr3")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, -130)
zoom = Vector2(3, 3)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAUAAAABAAAAAQABAAUAAAACAAAAAQABAAUAAAADAAAAAQABAAUAAAAEAAAAAQABAAUAAAAJAAAAAQABAAUAAAAKAAAAAQABAAUAAAALAAAAAQABAAUAAAAMAAAAAQABAAUAAAANAAAAAQABAAUAAAAOAAAAAQABAAUAAAAPAAAAAQABAAUAAAAAAAIAAQABAAUAAAABAAIAAQABAAUAAAARAAIAAQABAAUAAAASAAIAAQABAAUAAAAQAAIAAQABAAUAAAAPAAIAAQABAAUAAAAOAAIAAQABAAUAAAANAAIAAQABAAUAAAAMAAIAAQABAAUAAAALAAIAAQABAAUAAAAKAAIAAQABAAUAAAAJAAIAAQABAAUAAAAAAAMAAQABAAUAAAABAAMAAQABAAUAAAAJAAMAAQABAAUAAAAKAAMAAQABAAUAAAALAAMAAQABAAUAAAAMAAMAAQABAAUAAAANAAMAAQABAAUAAAAOAAMAAQABAAUAAAAPAAMAAQABAAUAAAAQAAMAAQABAAUAAAARAAMAAQABAAUAAAASAAMAAQABAAUAAAASAAQAAQABAAUAAAARAAQAAQABAAUAAAAQAAQAAQABAAUAAAAPAAQAAQABAAUAAAAOAAQAAQABAAUAAAANAAQAAQABAAUAAAAMAAQAAQABAAUAAAALAAQAAQABAAUAAAAKAAQAAQABAAUAAAAJAAQAAQABAAUAAAAGAAQAAQABAAUAAAAFAAQAAQABAAUAAAAEAAQAAQABAAUAAAADAAQAAQABAAUAAAACAAQAAQABAAUAAAABAAQAAQABAAUAAAAAAAQAAQABAAUAAAAYAAAAAQABAAUAAAAZAAAAAQABAAUAAAAaAAAAAQABAAUAAAAbAAAAAQABAAUAAAAcAAAAAQABAAUAAAAdAAAAAQABAAUAAAAeAAAAAQABAAUAAAAfAAAAAQABAAUAAAAgAAAAAQABAAEAAAAhAAAAAQABAAEAAAAiAAAAAQABAAUAAAAjAAAAAQABAAEAAAAkAAAAAQABAAEAAAATAAIAAQABAAUAAAATAAMAAQABAAUAAAATAAQAAQABAAUAAAAUAAIAAQABAAUAAAAUAAMAAQABAAUAAAAUAAQAAQABAAUAAAAVAAEAAQABAAUAAAAVAAIAAQABAAUAAAAVAAMAAQABAAUAAAAVAAQAAQABAAUAAAAWAAEAAQABAAUAAAAWAAIAAQABAAUAAAAWAAMAAQABAAUAAAAWAAQAAQABAAUAAAAXAAEAAQABAAUAAAAXAAIAAQABAAUAAAAXAAMAAQABAAUAAAAXAAQAAQABAAUAAAAYAAEAAQABAAUAAAAYAAIAAQABAAUAAAAYAAMAAQABAAUAAAAYAAQAAQABAAUAAAAZAAEAAQABAAUAAAAZAAIAAQABAAUAAAAZAAMAAQABAAUAAAAZAAQAAQABAAUAAAAaAAEAAQABAAUAAAAaAAIAAQABAAUAAAAaAAMAAQABAAUAAAAaAAQAAQABAAUAAAAbAAEAAQABAAUAAAAbAAIAAQABAAUAAAAbAAMAAQABAAUAAAAbAAQAAQABAAUAAAAcAAEAAQABAAUAAAAcAAIAAQABAAUAAAAcAAMAAQABAAUAAAAcAAQAAQABAAUAAAAdAAEAAQABAAUAAAAdAAIAAQABAAUAAAAdAAMAAQABAAUAAAAdAAQAAQABAAUAAAAeAAEAAQABAAUAAAAeAAIAAQABAAUAAAAeAAMAAQABAAUAAAAeAAQAAQABAAUAAAAfAAEAAQABAAEAAAAfAAIAAQABAAUAAAAfAAMAAQABAAEAAAAfAAQAAQABAAUAAAAgAAEAAQABAAUAAAAgAAIAAQABAAEAAAAgAAMAAQABAAUAAAAgAAQAAQABAAUAAAAhAAEAAQABAAUAAAAhAAIAAQABAAUAAAAhAAMAAQABAAUAAAAhAAQAAQABAAUAAAAiAAEAAQABAAEAAAAiAAIAAQABAAUAAAAiAAMAAQABAAEAAAAiAAQAAQABAAUAAAAjAAEAAQABAAUAAAAjAAIAAQABAAEAAAAjAAMAAQABAAUAAAAjAAQAAQABAAUAAAAkAAEAAQABAAEAAAAkAAIAAQABAAEAAAAkAAMAAQABAAEAAAAkAAQAAQABAAEAAAAlAAAAAQABAAEAAAAmAAAAAQABAAEAAAAnAAAAAQABAAEAAAAlAAEAAQABAAEAAAAmAAEAAQABAAEAAAAnAAEAAQABAAEAAAAnAAIAAQABAAEAAAAnAAMAAQABAAEAAAAnAAQAAQABAAEAAAAmAAQAAQABAAEAAAAlAAQAAQABAAEAAAAlAAMAAQABAAEAAAAmAAMAAQABAAEAAAAmAAIAAQABAAEAAAAlAAIAAQABAAEAAAAoAAQAAQABAAEAAAAoAAMAAQABAAEAAAAoAAIAAQABAAEAAAAoAAEAAQABAAEAAAAQAAAAAQABAAUAAAARAAAAAQABAAUAAAAVAAAAAQABAAUAAAAWAAAAAQABAAUAAAAXAAAAAQABAAUAAAAFAAAAAQABAAUAAAAGAAAAAQABAAUAAAAAAAEAAQABAAUAAAABAAEAAQABAAUAAAAJAAEAAQABAAUAAAAKAAEAAQABAAUAAAALAAEAAQABAAUAAAAMAAEAAQABAAUAAAANAAEAAQABAAUAAAAOAAEAAQABAAUAAAAPAAEAAQABAAUAAAAQAAEAAQABAAUAAAARAAEAAQABAAUAAAASAAEAAQABAAUAAAATAAEAAQABAAUAAAAUAAEAAQABAAUAAAAlAP//AQABAAAAAAAmAP//AQABAAAAAAAnAP//AQABAAAAAAAoAAAAAQABAAEAAAApAPX/AQABAAUAAAApAPb/AQABAAUAAAApAPf/AQABAAUAAAApAPj/AQABAAUAAAApAPn/AQABAAUAAAApAPr/AQABAAUAAAApAPv/AQABAAUAAAApAPz/AQABAAUAAAApAP3/AQABAAUAAAApAP7/AQABAAUAAAApAP//AQABAAEAAAApAAAAAQABAAEAAAApAAEAAQABAAEAAAApAAIAAQABAAEAAAApAAMAAQABAAEAAAApAAQAAQABAAEAAAAHAAAAAQABAAUAAAAHAAEAAQABAAUAAAAHAAIAAQABAAUAAAAHAAMAAQABAAUAAAAHAAQAAQABAAUAAAAIAAAAAQABAAUAAAAIAAEAAQABAAUAAAAIAAIAAQABAAUAAAAIAAMAAQABAAUAAAAIAAQAAQABAAUAAAD///X/AQABAAUAAAD///b/AQABAAUAAAD///f/AQABAAUAAAD///j/AQABAAUAAAD///n/AQABAAUAAAD///3/AQABAAUAAAD///7/AQABAAUAAAD/////AQABAAUAAAD///z/AQABAAUAAAD///v/AQABAAUAAAD///r/AQABAAUAAAD//wQAAQABAAUAAAD//wAAAQABAAUAAAD//wEAAQABAAUAAAD//wIAAQABAAUAAAD//wMAAQABAAUAAAAkAP//AQABAAAAAAAoAP//AQABAAAAAAD+/+3/AQABAAUAAAD+/+7/AQABAAUAAAD+/+//AQABAAUAAAD+//D/AQABAAUAAAD+//H/AQABAAUAAAD+//L/AQABAAUAAAD+//P/AQABAAUAAAD+//T/AQABAAUAAAD+//X/AQABAAUAAAD+//b/AQABAAUAAAD+//f/AQABAAUAAAD+//j/AQABAAUAAAD+//n/AQABAAUAAAD+//r/AQABAAUAAAD+//v/AQABAAUAAAD+//z/AQABAAUAAAD+//3/AQABAAUAAAD+//7/AQABAAUAAAD+////AQABAAUAAAD+/wAAAQABAAUAAAD+/wEAAQABAAUAAAD+/wIAAQABAAUAAAD+/wMAAQABAAUAAAD+/wQAAQABAAUAAAACAAEAAQABAAUAAAACAAIAAQABAAUAAAACAAMAAQABAAUAAAADAAEAAQABAAUAAAADAAIAAQABAAUAAAADAAMAAQABAAUAAAAEAAEAAQABAAUAAAAEAAIAAQABAAUAAAAEAAMAAQABAAUAAAAFAAEAAQABAAUAAAAFAAIAAQABAAUAAAAFAAMAAQABAAUAAAAGAAEAAQABAAUAAAAGAAIAAQABAAUAAAAGAAMAAQABAAUAAAAAAP//AQABAAQAAAABAP//AQABAAQAAAACAP//AQABAAQAAAADAP//AQABAAQAAAD//+3/AQABAAUAAAD//+7/AQABAAUAAAD//+//AQABAAUAAAD///D/AQABAAUAAAD///H/AQABAAUAAAD///L/AQABAAUAAAD///P/AQABAAUAAAD///T/AQABAAUAAAApAO3/AQABAAUAAAApAO7/AQABAAUAAAApAO//AQABAAUAAAApAPD/AQABAAUAAAApAPH/AQABAAUAAAApAPL/AQABAAUAAAApAPP/AQABAAUAAAApAPT/AQABAAUAAAAEAP//AQABAAQAAAAFAP//AQABAAQAAAAGAP//AQABAAQAAAAHAP//AQABAAQAAAAIAP//AQABAAQAAAAJAP//AQABAAQAAAAKAP//AQABAAQAAAALAP//AQABAAQAAAAMAP//AQABAAUAAAANAP//AQABAAUAAAAOAP//AQABAAUAAAAPAP//AQABAAUAAAAQAP//AQABAAUAAAARAP//AQABAAUAAAAVAP//AQABAAUAAAAWAP//AQABAAUAAAAXAP//AQABAAUAAAAYAP//AQABAAUAAAAZAP//AQABAAUAAAAaAP//AQABAAUAAAAbAP//AQABAAUAAAAcAP//AQABAAUAAAAdAP//AQABAAUAAAAeAP//AQABAAEAAAAfAP//AQABAAEAAAAgAP//AQABAAUAAAAhAP//AQABAAEAAAAiAP//AQABAAUAAAAjAP//AQABAAEAAAAoAO3/AQABAAUAAAAoAO7/AQABAAUAAAACAP7/AQADAAQAAAADAP7/AQADAAQAAAAVAP7/AQABAAUAAAAkAP7/AQAAAAMAAAAlAP7/AQACAAMAAAAeAP7/AQABAAUAAAABAP7/AQAEAAQAAAAaAO3/AQABAAUAAAAaAO7/AQABAAYAAAANAO3/AQABAAUAAAANAO7/AQABAAYAAAAUAO3/AQABAAUAAAAUAO7/AQABAAUAAAAGAO3/AQABAAUAAAAGAO7/AQABAAYAAAAiAO3/AQABAAEAAAAiAO7/AQABAAUAAAAeAO3/AQABAAUAAAAeAO7/AQABAAYAAAAAAO3/AQABAAUAAAABAO3/AQABAAUAAAACAO3/AQABAAUAAAADAO3/AQABAAUAAAAEAO3/AQABAAUAAAAFAO3/AQABAAUAAAAHAO3/AQABAAUAAAAIAO3/AQABAAUAAAAJAO3/AQABAAUAAAAKAO3/AQABAAUAAAALAO3/AQABAAUAAAAMAO3/AQABAAUAAAAOAO3/AQABAAUAAAAPAO3/AQABAAUAAAAQAO3/AQABAAUAAAARAO3/AQABAAUAAAASAO3/AQABAAUAAAATAO3/AQABAAUAAAAVAO3/AQABAAUAAAAWAO3/AQABAAUAAAAXAO3/AQABAAUAAAAYAO3/AQABAAUAAAAZAO3/AQABAAUAAAAbAO3/AQABAAUAAAAcAO3/AQABAAUAAAAdAO3/AQABAAUAAAAfAO3/AQABAAUAAAAgAO3/AQABAAUAAAAhAO3/AQABAAEAAAAjAO3/AQABAAUAAAAkAO3/AQABAAUAAAAlAO3/AQABAAUAAAAmAO3/AQABAAUAAAAnAO3/AQABAAUAAAAAAO7/AQABAAUAAAABAO7/AQABAAUAAAACAO7/AQABAAUAAAADAO7/AQABAAUAAAAEAO7/AQABAAUAAAAFAO7/AQABAAUAAAAHAO7/AQABAAYAAAAIAO7/AQABAAYAAAAJAO7/AQABAAYAAAAKAO7/AQABAAYAAAALAO7/AQABAAYAAAAMAO7/AQABAAYAAAAOAO7/AQABAAYAAAAPAO7/AQABAAYAAAAQAO7/AQABAAUAAAARAO7/AQABAAUAAAASAO7/AQABAAUAAAATAO7/AQABAAUAAAAVAO7/AQABAAUAAAAWAO7/AQABAAUAAAAXAO7/AQABAAUAAAAYAO7/AQABAAUAAAAZAO7/AQABAAYAAAAbAO7/AQABAAYAAAAcAO7/AQABAAYAAAAdAO7/AQABAAYAAAAfAO7/AQABAAYAAAAgAO7/AQABAAYAAAAhAO7/AQABAAYAAAAnAO7/AQABAAUAAAAjAO7/AQABAAUAAAAkAO7/AQABAAUAAAAlAO7/AQABAAUAAAAmAO7/AQABAAUAAAASAP7/AQABAAUAAAASAP//AQABAAUAAAASAAAAAQABAAUAAAATAP//AQABAAUAAAATAAAAAQABAAUAAAAUAP//AQABAAUAAAAUAAAAAQABAAUAAAASAO//AQABAAUAAAASAPD/AQAAAAUAAAASAPH/AQAAAAUAAAASAPL/AQAAAAUAAAASAPP/AQAAAAUAAAASAPT/AQAAAAUAAAASAPX/AQAAAAUAAAASAPb/AQAAAAUAAAASAPf/AQAAAAUAAAASAPj/AQAAAAUAAAASAPn/AQAAAAUAAAASAPr/AQAAAAUAAAASAPv/AQAAAAUAAAASAPz/AQABAAUAAAASAP3/AQABAAUAAAATAO//AQABAAUAAAATAPD/AQABAAUAAAATAPH/AQABAAUAAAATAPL/AQABAAUAAAATAPP/AQABAAUAAAATAPT/AQABAAUAAAATAPX/AQABAAUAAAATAPb/AQABAAUAAAATAPf/AQABAAUAAAATAPj/AQABAAUAAAATAPn/AQABAAUAAAATAPr/AQABAAUAAAATAPv/AQABAAUAAAATAPz/AQABAAUAAAATAP3/AQABAAUAAAATAP7/AQABAAUAAAAUAO//AQABAAUAAAAUAPD/AQABAAUAAAAUAPH/AQABAAUAAAAUAPL/AQABAAUAAAAUAPP/AQABAAUAAAAUAPT/AQABAAUAAAAUAPX/AQABAAUAAAAUAPb/AQABAAUAAAAUAPf/AQABAAUAAAAUAPj/AQABAAUAAAAUAPn/AQABAAUAAAAUAPr/AQABAAUAAAAUAPv/AQABAAUAAAAUAPz/AQABAAUAAAAUAP3/AQABAAUAAAAUAP7/AQABAAUAAAAVAO//AQABAAUAAAAVAPD/AQABAAUAAAAVAPH/AQABAAUAAAAVAPL/AQACAAUAAAAVAPP/AQACAAUAAAAVAPT/AQACAAUAAAAVAPX/AQACAAUAAAAVAPb/AQACAAUAAAAVAPf/AQACAAUAAAAVAPj/AQACAAUAAAAVAPn/AQABAAUAAAAVAPr/AQABAAUAAAAVAPv/AQABAAUAAAAVAPz/AQABAAUAAAAVAP3/AQABAAUAAAAAAO//AQABAAUAAAAAAPD/AQABAAYAAAABAO//AQABAAUAAAABAPD/AQABAAYAAAACAO//AQABAAUAAAACAPD/AQABAAYAAAADAO//AQABAAUAAAADAPD/AQABAAYAAAAEAO//AQABAAUAAAAEAPD/AQABAAYAAAAFAO//AQACAAUAAAAFAPD/AQACAAYAAAAQAO//AQAAAAYAAAARAO//AQABAAYAAAAWAO//AQABAAUAAAAWAPD/AQABAAUAAAAWAPH/AQABAAYAAAAXAO//AQABAAUAAAAXAPD/AQABAAUAAAAXAPH/AQABAAYAAAAYAO//AQACAAUAAAAYAPD/AQACAAUAAAAYAPH/AQACAAYAAAAWAPz/AQABAAUAAAAWAP3/AQABAAUAAAAWAP7/AQABAAUAAAAXAPz/AQABAAUAAAAXAP3/AQABAAUAAAAXAP7/AQABAAUAAAAYAPz/AQABAAUAAAAYAP3/AQABAAUAAAAYAP7/AQABAAUAAAAZAPz/AQABAAUAAAAZAP3/AQABAAUAAAAZAP7/AQABAAUAAAAaAPz/AQABAAUAAAAaAP3/AQABAAUAAAAaAP7/AQABAAUAAAAWAPn/AQABAAQAAAAWAPr/AQABAAUAAAAWAPv/AQABAAUAAAAXAPn/AQABAAQAAAAXAPr/AQABAAUAAAAXAPv/AQABAAUAAAAYAPn/AQABAAQAAAAYAPr/AQABAAUAAAAYAPv/AQABAAUAAAAZAPn/AQABAAQAAAAZAPr/AQABAAUAAAAZAPv/AQABAAUAAAAaAPn/AQABAAQAAAAaAPr/AQABAAUAAAAaAPv/AQABAAUAAAAbAPn/AQABAAQAAAAbAPr/AQABAAUAAAAbAPv/AQABAAUAAAAbAPz/AQABAAUAAAAbAP3/AQABAAUAAAAbAP7/AQABAAUAAAAcAPn/AQABAAQAAAAcAPr/AQABAAUAAAAcAPv/AQABAAUAAAAcAPz/AQABAAUAAAAcAP3/AQABAAUAAAAcAP7/AQABAAEAAAAdAPn/AQABAAQAAAAdAPr/AQABAAUAAAAdAPv/AQABAAUAAAAdAPz/AQABAAUAAAAdAP3/AQABAAUAAAAdAP7/AQABAAUAAAAeAPn/AQABAAQAAAAeAPr/AQABAAUAAAAeAPv/AQABAAUAAAAeAPz/AQABAAUAAAAeAP3/AQABAAUAAAAfAPn/AQABAAQAAAAfAPr/AQABAAUAAAAfAPv/AQABAAUAAAAfAPz/AQABAAUAAAAfAP3/AQABAAUAAAAfAP7/AQABAAUAAAAgAPn/AQACAAQAAAAgAPr/AQACAAUAAAAgAPv/AQACAAUAAAAgAPz/AQACAAUAAAAgAP3/AQABAAEAAAAgAP7/AQABAAUAAAAhAP3/AQABAAQAAAAhAP7/AQABAAUAAAAiAP3/AQABAAAAAAAiAP7/AQABAAEAAAAjAP3/AQACAAAAAAAjAP7/AQABAAEAAAAlAO//AQABAAUAAAAlAPD/AQABAAUAAAAmAO//AQABAAUAAAAmAPD/AQABAAUAAAAnAO//AQABAAUAAAAnAPD/AQABAAEAAAAoAO//AQABAAEAAAAoAPD/AQABAAUAAAAiAO//AQAAAAUAAAAiAPD/AQAAAAUAAAAiAPH/AQAAAAYAAAAjAO//AQABAAUAAAAjAPD/AQABAAUAAAAjAPH/AQABAAYAAAAkAO//AQABAAUAAAAkAPD/AQABAAEAAAAkAPH/AQABAAYAAAAlAPH/AQABAAEAAAAmAPH/AQABAAYAAAAnAPH/AQABAAYAAAAoAPH/AQABAAIAAAANAP7/AQABAAUAAAAOAP7/AQABAAUAAAAPAP7/AQABAAUAAAAQAP7/AQABAAUAAAARAP7/AQABAAUAAAAMAPz/AQAAAAQAAAAMAP3/AQAAAAUAAAAMAP7/AQAAAAUAAAANAPz/AQABAAQAAAANAP3/AQABAAUAAAAOAPz/AQABAAQAAAAOAP3/AQABAAUAAAAPAPz/AQABAAQAAAAPAP3/AQABAAUAAAAQAPz/AQABAAQAAAAQAP3/AQABAAUAAAARAPz/AQABAAQAAAARAP3/AQABAAUAAAAAAPb/AQABAAQAAAABAPb/AQABAAQAAAACAPb/AQABAAQAAAADAPb/AQABAAQAAAAEAPb/AQABAAQAAAAFAPb/AQACAAQAAAAAAPf/AQABAAUAAAABAPf/AQABAAUAAAACAPf/AQABAAYAAAADAPf/AQABAAYAAAAAAPj/AQABAAYAAAABAPj/AQACAAYAAAAMAPv/AQADAAQAAAANAPv/AQAEAAQAAAAQAPD/AQAEAAUAAAAJAO//AQAEAAUAAAAHAO//AQADAAUAAAAFAPH/AQAEAAUAAAAFAPf/AQAEAAUAAAAYAPL/AQAEAAUAAAAkAPL/AQAEAAUAAAAjAPL/AQADAAUAAAAgAO//AQADAAUAAAAbAPj/AQADAAQAAAAdAPj/AQAEAAQAAAAWAPj/AQAEAAQAAAAjAPz/AQAAAAMAAAANAO//AQAIAAcAAAAOAO//AQAIAAcAAAAPAO//AQAIAAcAAAAIAO//AQAIAAcAAAAGAO//AQAIAAcAAAAAAPH/AQAHAAcAAAARAPD/AQAHAAcAAAAWAPL/AQAHAAcAAAAXAPL/AQAHAAcAAAAZAO//AQAHAAcAAAAaAO//AQAHAAcAAAAbAO//AQAHAAcAAAAfAO//AQAGAAcAAAAmAPL/AQAHAAcAAAAiAPL/AQAHAAcAAAAhAO//AQAHAAcAAAAhAPz/AQAEAAQAAAAgAPj/AQADAAQAAAAEAPf/AQAHAAcAAAAAAPn/AQAHAAcAAAD+/+z/AQABAAQAAAD//+z/AQABAAQAAAAAAOz/AQABAAQAAAABAOz/AQABAAQAAAACAOz/AQABAAQAAAADAOz/AQABAAQAAAAEAOz/AQABAAQAAAAFAOz/AQABAAQAAAAGAOz/AQABAAQAAAAHAOz/AQABAAQAAAAIAOz/AQABAAQAAAAJAOz/AQABAAQAAAAKAOz/AQABAAQAAAALAOz/AQABAAQAAAAMAOz/AQABAAQAAAANAOz/AQABAAQAAAAOAOz/AQABAAQAAAAPAOz/AQABAAQAAAAQAOz/AQABAAQAAAARAOz/AQABAAQAAAASAOz/AQABAAQAAAATAOz/AQABAAQAAAAUAOz/AQABAAQAAAAVAOz/AQABAAQAAAAWAOz/AQABAAQAAAAXAOz/AQABAAQAAAAYAOz/AQABAAQAAAAZAOz/AQABAAQAAAAaAOz/AQABAAQAAAAbAOz/AQABAAQAAAAcAOz/AQABAAQAAAAdAOz/AQABAAQAAAAeAOz/AQABAAQAAAAfAOz/AQABAAQAAAAgAOz/AQABAAQAAAAhAOz/AQABAAQAAAAiAOz/AQABAAQAAAAjAOz/AQABAAQAAAAkAOz/AQABAAQAAAAlAOz/AQABAAQAAAAmAOz/AQABAAQAAAAnAOz/AQABAAQAAAAoAOz/AQABAAQAAAApAOz/AQABAAQAAAA=")
tile_set = SubResource("TileSet_xoy03")

[node name="PortalEntrance" type="Area2D" parent="."]
position = Vector2(4, -9)
collision_layer = 64
script = ExtResource("5_p0t4e")

[node name="Sprite2D" type="Sprite2D" parent="PortalEntrance"]
position = Vector2(259, -91)
texture = ExtResource("6_dvuif")
script = ExtResource("8_7ph8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PortalEntrance"]
position = Vector2(259, -91)
scale = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_by1fu")

[node name="PointLight2D" type="PointLight2D" parent="PortalEntrance"]
material = SubResource("ShaderMaterial_h1tbk")
position = Vector2(382, -149)
scale = Vector2(0.0942978, 0.0942978)
color = Color(0.35299, 0.800355, 0.852495, 1)
energy = 9.82
blend_mode = 2
texture = ExtResource("11_by1fu")

[node name="PortalExit" type="Area2D" parent="."]
position = Vector2(376, -142)
collision_layer = 64

[node name="Sprite2D" type="Sprite2D" parent="PortalExit"]
position = Vector2(-3, -13)
texture = ExtResource("7_7ph8i")
script = ExtResource("8_7ph8i")

[node name="PointLight2D" type="PointLight2D" parent="PortalExit"]
material = SubResource("ShaderMaterial_kbgx0")
position = Vector2(-120, 37)
scale = Vector2(0.0942978, 0.0942978)
color = Color(0.308738, 0.843315, 0.521796, 1)
energy = 9.82
blend_mode = 2
texture = ExtResource("11_by1fu")

[node name="Interactable" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 128
script = ExtResource("6_mg4fs")

[node name="Sprite2D" type="Sprite2D" parent="Interactable"]
z_index = -1
position = Vector2(23, -212)
texture = ExtResource("8_15dr6")
script = ExtResource("8_7ph8i")

[node name="PointLight2D" type="PointLight2D" parent="Interactable/Sprite2D"]
material = SubResource("ShaderMaterial_10slw")
position = Vector2(3, 22)
scale = Vector2(0.0942978, 0.0942978)
color = Color(0.950822, 0.650479, 0.360119, 1)
energy = 9.82
blend_mode = 2
texture = ExtResource("11_by1fu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(23, -189)
shape = SubResource("CircleShape2D_ebg0i")

[node name="Label" type="Label" parent="."]
offset_left = 9.0
offset_top = -212.0
offset_right = 295.0
offset_bottom = -189.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_5ovaj")
text = "Quack at this!"
vertical_alignment = 1
script = ExtResource("9_15dr6")

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = 228.0
offset_top = -145.0
offset_right = 514.0
offset_bottom = -122.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("8_5ovaj")
text = "Now go through this!"
vertical_alignment = 1
script = ExtResource("9_15dr6")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
material = SubResource("ShaderMaterial_ect60")
tile_map_data = PackedByteArray("AAACAP7/AQADAAQAAAADAP7/AQADAAQAAAAMAPv/AQADAAQAAAAMAO//AQAGAAQAAAAMAPD/AQAGAAUAAAAMAPH/AQAGAAYAAAAMAPL/AQAGAAcAAAAEAPL/AQAGAAUAAAAEAPP/AQAGAAYAAAAEAPT/AQAGAAcAAAAcAO//AQAGAAQAAAAcAPD/AQAGAAUAAAAcAPH/AQAGAAYAAAAcAPL/AQAGAAcAAAAdAO//AQAHAAQAAAAdAPD/AQAHAAUAAAAdAPH/AQAHAAYAAAAlAPL/AQAFAAAAAAACAPr/AQAGAAYAAAACAPv/AQAGAAcAAAADAPj/AQAHAAQAAAADAPn/AQAHAAUAAAADAPr/AQAHAAYAAAAlAPP/AQAFAAEAAAAlAPT/AQAFAAIAAAAnAPL/AQAGAAQAAAAnAPP/AQAGAAUAAAAnAPT/AQAGAAYAAAAnAPX/AQAGAAcAAAAEAPH/AQAGAAQAAAACAPj/AQAGAAQAAAACAPn/AQAGAAUAAAA=")
tile_set = SubResource("TileSet_xoy03")

[node name="Shadow" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[connection signal="body_entered" from="Exit" to="Exit" method="_on_body_entered"]
[connection signal="body_entered" from="PortalEntrance" to="PortalEntrance" method="_on_body_entered"]
[connection signal="area_entered" from="Interactable" to="Interactable" method="_on_area_entered"]
